2012-05-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/tclrivet/tclrivetparser.tcl: Tcl parser implements new shorthand echo syntax (closes
    bug #53217)
    * rivet/packages/tclrivet/parse.tcl: auto_path handling improved as suggested in bug #52898
    * doc/xml/commands.xml: improved manual entry for 'var list' (Fixes bug #52911)
 
2012-05-12 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetParser.c: add shorthand expression <?= ... ?> for <? puts -nonewline "..." ?> (contributed 
    by Jeff Lawson,addresses #53217, tclrivetparser yet to be fixed)
    * tests/shorthand.[test|rvt]: add test of shorthand notation for string output 
    * rivet/rivet-tcl/cookie.tcl: add support for HttpOnly flag (contributed by Cyril Shtumf, 
    fixes bug #53224)
    * rivet/packages/session/session-class.tcl: support for HttpOnly flag improves security and reduces
    the risk of cross-site scripting attacks (contributed by Cyril Shtumf, fixes #52224)
    * rivet/packages/dio/dio.tcl: wrong SQL syntax generated in delete method when multiple fields are
    used in the selection clause (contributed by Cyril Shtumf, fixes bug #53222)
    * rivet/packages/dio/dio_Mysql.tcl: Mysql connection must be checked when connection reference is reused
    because it could have dropped (contributed by Cyril Shtumf, fixes #53221)

2011-09-23 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-1/rivetCore.c: fixed declarations for various calls to ap_pstrcat.

2011-09-23 Massimo Manghi <mxmanghi@apache.org>
    * debian/rules,debian/changelog: new lintian required targets, current Debian package version bumped up to 2.0.4-1
    * src/apache-1/TclWebapache.c,src/apache-1/rivetCode.c: latest changes for 'makeurl', 'load_env' and 'load_headers'
    ported to code for Apache 1.x

2011-09-21 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/calendar/calendar.tcl: fixed wrong conversion of month expressed as numeric string

2011-09-20 Massimo Manghi <mxmanghi@apache.org>